modified html file

--- a/index.html
+++ b/index.html
@@ -6,11 +6,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="index.js"></script>
+
+
 </head>
 
 <body>
-    <h1> Welcome to JS World
-    </h1>
+    <h1>Welcome to JAVASCRIPT</h1>
+    <script>
+        //Datatypes
+        //string -> ""  or ' ' or `` (backtick)
+        //number -> 
+        //boolean
+
+
+
+        console.log("Yuvraj");
+        console.log(123456789);
+        console.log("Mumbai");
+        console.log("I am a developer.");
+
+        // Variables naming conventions : camelCase & snake_case
+        var phoneNo;
+
+        phoneNo = 4952356
+        bdayDate = 23112002
+
+        birthYear = 2002
+        currentYear = 2024
+        console.log(bdayDate - phoneNo);
+        console.log(currentYear - birthYear);
+        console.log(currentYear * birthYear);
+        console.log(currentYear / birthYear);
+
+
+        var Celsius = prompt("Enter Celsius");
+
+        console.log((Celsius * 9 / 5) + 32 )
+
+
+    </script>
 </body>
 
 </html>
