--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         console.log(currentYear / birthYear);
 
 
-        var Celsius = prompt("Enter Celsius");
+        // var Celsius = prompt("Enter Celsius");
 
-        console.log((Celsius * 9 / 5) + 32 )
+        // console.log((Celsius * 9 / 5) + 32 )
 
 
     </script>
