added new files & changes in old files

--- a/function/upi.html
+++ b/function/upi.html
@@ -1,3 +1,4 @@
+<!-- Arrays -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -21,7 +22,7 @@
         console.log(pokemon);
         pokemon.pop();
         console.log(pokemon)
-        console.log(pokemon.lengthxxxxxx)
+        console.log(pokemon.length)
 
     </script>
 </body>
